# claudex

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pl.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  cliff.toml  config.example.toml  config.example.yaml  install.sh  sets.json
.claude/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: architecture.md  requirements.md
schemas/sets/: v1.json
scripts/: test-all-profiles.sh
src/: cli.rs  config.rs  config_cmd.rs  daemon.rs  launch.rs  main.rs  metrics.rs  profile.rs  update.rs  util.rs
src/config/: cmd.rs  mod.rs  profile.rs
src/context/: compression.rs  mod.rs  rag.rs  sharing.rs
src/oauth/: exchange.rs  handler.rs  manager.rs  mod.rs  providers.rs  server.rs  source.rs  token.rs
src/process/: launch.rs  mod.rs
src/proxy/: context_engine.rs  error.rs  fallback.rs  handler.rs  health.rs  middleware.rs  mod.rs  models.rs  responses.rs  responses_streaming.rs  streaming.rs  translation.rs  util.rs
src/proxy/adapter/: chat_completions.rs  direct.rs  mod.rs  responses.rs
src/proxy/translate/: chat_completions.rs  chat_completions_stream.rs  mod.rs  (+2 more)
src/router/: classifier.rs  mod.rs
src/sets/: conflict.rs  install.rs  lock.rs  mcp.rs  mod.rs  schema.rs  source.rs
src/terminal/: detect.rs  mod.rs  osc8.rs  pty.rs
src/tui/: dashboard.rs  input.rs  mod.rs  widgets.rs
tests/: proxy_integration.rs
website/: astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.toml
website/public/: CNAME  _headers  _redirects  index.html  robots.txt
website/scripts/: generate-assets.mjs
(+223 files in other folders)
